--- a/releaser/templates/mail.md.j2
+++ b/releaser/templates/mail.md.j2
@@ -21,14 +21,14 @@
     }
 </style>
 
-Heads up ! **{{ app_name }}** {{ config.next_version.lower() }} version **{{ next_version }}** will be released {{ config.start_text }}:
+Heads up ! **{{ app_name }}** {{ config.next_version.lower() }} version `{{ next_version }}` will be released {{ config.start_text }}:
 
 {% block details_table -%}
 <table>
   <tr><td>Start time</td><td>{{ config.start }}</td></tr>
   <tr><td>End time</td><td>{{ config.end }} (duration: {{ duration_text }})</td></tr>
   <tr><td>Expected Impact</td><td>{{app_name}} will not be reachable for {{ duration_text }}</td></tr>
-  <tr><td>Rollback</td><td>Rollback to {{app_name}} previous version {{ current_version }}</td></tr>
+  <tr><td>Rollback</td><td>Rollback to {{app_name}} previous version <code>{{ current_version }}</code></td></tr>
 </table>
 <br />
 {% endblock %}
@@ -40,5 +40,5 @@ Here are the changes introduced with that version:
 {%- endblock -%}
 
 {% block postscriptum %}
-{{ config.preprod_url or 'The preproduction server' }} is already running version {{ next_version }}, so please check for changes related to your business.
+{{ config.preprod_url or 'The preproduction server' }} is already running version `{{ next_version }}`, so please check for changes related to your business.
 {% endblock %}
